--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,62 @@
+# Laravel specific
 /vendor/
-node_modules/
+/node_modules/
 npm-debug.log
 yarn-error.log
-
-# Laravel 4 specific
-bootstrap/compiled.php
-app/storage/
-
-# Laravel 5 & Lumen specific
-public/storage
-public/hot
-
-# Laravel 5 & Lumen specific with changed public path
-public_html/storage
-public_html/hot
-
-storage/*.key
 .env
+.env.*.php
+.phpunit.result.cache
+/storage/*.key
+/public/hot
+/public/storage
+/storage/app/public
+/storage/framework/cache/data
+/storage/framework/sessions
+/storage/framework/testing/*
+/storage/framework/views/*
+/storage/logs/*.log
+/bootstrap/cache/*.php
+
+# Laravel Telescope
+/telescope/entry/**
+/telescope/cache/*
+
+# IDE specific
+/.idea
+/.vscode
+
+# Laravel Mix
+/public/mix-manifest.json
+/public/js/*.map
+/public/css/*.map
+/public/hot
+
+# Composer
+composer.phar
+
+# Vagrant
 Homestead.yaml
 Homestead.json
-/.vagrant
+
+# NPM
+node_modules/
+
+# MacOS specific
+.DS_Store
+
+# Windows specific
+Thumbs.db
+Desktop.ini
+
+# IDE Specific
+*.sublime-project
+*.sublime-workspace
+
+# Laravel Swoole
+/swoole_http_server
+
+# Other
+/.env.backup
+/.env.production
+/.env.local
 .phpunit.result.cache
