--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,8 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "laravel/ui": "^4.5",
+        "php-open-source-saver/jwt-auth": "^2.7",
         "spatie/laravel-permission": "^6.9"
     },
     "require-dev": {
